🔨Fix broken style

--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -31,6 +31,7 @@
 .login__forgot-pass {
   display: flex;
   justify-content: flex-end;
+  padding: 2rem 0;
 }
 
 .login__social {
@@ -38,16 +39,4 @@
   justify-content: space-evenly;
   align-items: center;
   height: 140px;
-}
-
-.MOCK-social-login {
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #ffffff;
-  background-color: #000000;
-  height: 4rem;
-  width: 4rem;
-  border-radius: 100%;
 }
